--- a/src/assets/style/scss/_top-bar.scss
+++ b/src/assets/style/scss/_top-bar.scss
@@ -1,17 +1,11 @@
 .top-bar {
   width: 100%;
-  height: 48px;
-  // background-color: #ecc636;
-  // background-color: goldenrod;
-  color: #faf1fa;
-  font-weight: bold;
-  font-size: 16px;
-  // padding: 8px 16px;
-  border-radius: 12px;
+  height: 42px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.2);
+  background-color: #f1af00;
+  padding: 8px 12px;
 
   .logo {
     height: 100%;
