--- a/src/assets/style/css/style.css
+++ b/src/assets/style/css/style.css
@@ -13,19 +13,100 @@
   color: inherit;
 }
 
+.custom-file-select {
+  cursor: pointer;
+  padding: 12px 20px !important;
+}
+
+button,
+.button {
+  background: #342e37;
+  color: #faf1fa;
+  box-shadow: 0px 4px 8px 0px rgba(61, 39, 72, 0.3764705882);
+  padding: 8px 12px;
+  border-radius: 8px;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  transition: all 0.2s ease-in-out;
+}
+button.outline,
+.button.outline {
+  background: transparent;
+  border: 1px solid #342e37;
+  color: #342e37;
+  box-shadow: 0px 2px 4px 0px rgba(61, 39, 72, 0.1882352941);
+}
+
+.title {
+  font-size: 18px;
+  margin-bottom: 12px;
+}
+
+.info,
+.error-message {
+  font-size: 12px;
+}
+
+.error-message {
+  color: #ed2210;
+}
+
 .top-bar {
   width: 100%;
-  height: 48px;
-  color: #faf1fa;
-  font-weight: bold;
-  font-size: 16px;
-  border-radius: 12px;
+  height: 42px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #f1af00;
+  padding: 8px 12px;
 }
 .top-bar .logo {
   height: 100%;
+}
+
+.file-drop-zone {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 400px;
+  padding: 24px;
+  border-radius: 8px;
+  border: 2px dashed #cfc8d2;
+  background-color: #efebf1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+.file-drop-zone .uploaded-file-list {
+  width: 50%;
+}
+@media (max-width: 768px) {
+  .file-drop-zone .uploaded-file-list {
+    width: 100%;
+  }
+}
+.file-drop-zone .uploaded-file-list li {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  margin-bottom: 12px;
+  padding-bottom: 12px;
+  border-bottom: 1px solid #cfc8d2;
+  font-size: 14px;
+}
+.file-drop-zone .uploaded-file-list li .icon {
+  font-size: 16px;
+}
+.file-drop-zone .uploaded-file-list li .name {
+  margin-right: 12px;
+}
+.file-drop-zone .uploaded-file-list li .size {
+  margin-left: auto;
 }
 
 .Yubi {
@@ -35,9 +116,8 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  background-color: #daa520;
-  background-color: #ffef61;
-  background-color: #342e37;
+  background-color: #faf1fa;
+  color: #342e37;
   font-size: 16px;
 }
 
@@ -46,42 +126,17 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 12px;
-  gap: 12px;
-}
-@media (min-width: 1300px) {
-  .app-container {
-    width: 1300px;
-  }
+  align-items: center;
+  padding: 24px;
+  gap: 24px;
 }
 @media (min-width: 768px) {
   .app-container {
-    padding: 24px;
-    gap: 24px;
+    width: 768px;
   }
 }
 
-.tool {
+.optimizer {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  padding: 12px;
-  border-radius: 12px;
-  background-color: #28b0a2;
-  background-color: #ecc636;
-  background-color: goldenrod;
-  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.2);
-}
-
-.footer {
-  width: 100%;
-  height: 48px;
-  background-color: #197070;
-  padding: 12px;
-  border-radius: 12px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.6);
 }/*# sourceMappingURL=style.css.map */
