--- a/src/assets/style/scss/style.scss
+++ b/src/assets/style/scss/style.scss
@@ -1,6 +1,8 @@
 @import "reset.scss";
+@import "ui.scss";
 @import "component.scss";
 @import "top-bar.scss";
+@import "file-drop-zone.scss";
 
 .Yubi {
   height: 100vh;
@@ -9,9 +11,8 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  background-color: #daa520;
-  background-color: #ffef61;
-  background-color: #342e37;
+  background-color: #faf1fa;
+  color: #342e37;
 
   font-size: 16px;
 }
@@ -21,40 +22,16 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 12px;
-  gap: 12px;
-
-  @media (min-width: 1300px) {
-    width: 1300px;
-  }
+  align-items: center;
+  padding: 24px;
+  gap: 24px;
 
   @media (min-width: 768px) {
-    padding: 24px;
-    gap: 24px;
+    width: 768px;
   }
 }
 
-.tool {
+.optimizer {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  padding: 12px;
-  border-radius: 12px;
-  background-color: #28b0a2;
-  background-color: #ecc636;
-  background-color: goldenrod;
-  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.2);
-}
-
-.footer {
-  width: 100%;
-  height: 48px;
-  background-color: #197070;
-  padding: 12px;
-  border-radius: 12px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.6);
 }
