Implement progress bar

--- a/src/assets/style/scss/style.scss
+++ b/src/assets/style/scss/style.scss
@@ -3,6 +3,7 @@
 @import "component.scss";
 @import "top-bar.scss";
 @import "file-drop-zone.scss";
+@import "progress-bar.scss";
 
 .Yubi {
   height: 100vh;
