--- a/src/assets/style/css/style.css
+++ b/src/assets/style/css/style.css
@@ -112,6 +112,33 @@ button.outline,
   margin-left: auto;
 }
 
+.progress-bar {
+  height: 12px;
+  width: 100%;
+  padding: 2px;
+  border-radius: 6px;
+  box-shadow: 0px 2px 4px 0px rgba(61, 39, 72, 0.1882352941);
+  background: #342e37;
+  margin-top: 30px;
+}
+.progress-bar .progress-bar-inner {
+  height: 8px;
+  border-radius: 4px;
+  width: 0;
+  background-color: #f1af00;
+}
+.progress-bar .progress-bar-inner.optimizing {
+  animation: load 0.4s ease forwards;
+}
+
+@keyframes load {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
 .Yubi {
   height: 100vh;
   width: 100vw;
