--- a/src/assets/style/css/style.css
+++ b/src/assets/style/css/style.css
@@ -169,4 +169,39 @@ button.outline,
 .optimizer {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.processed-file-list {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-top: 24px;
+}
+.processed-file-list .processed-file {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  height: 80px;
+}
+.processed-file-list .processed-file .processed-image {
+  width: 80px;
+  height: 80px;
+  background-color: #faf1fa;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.processed-file-list .processed-file .processed-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.processed-file-list .processed-file .processed-file-info {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }/*# sourceMappingURL=style.css.map */
